SAPR/5-6/y.output
Grammar

    0 $accept: input $end

    1 input: ε
    2      | input line

    3 line: ineq '\n'
    4     | error '\n'

    5 ineq: exp GLT COEF
    6     | exp GLT SIGN COEF

    7 exp: exp SIGN COEF
    8    | exp SIGN COEF X
    9    | exp SIGN X
   10    | SIGN COEF
   11    | SIGN COEF X
   12    | SIGN X
   13    | COEF
   14    | COEF X
   15    | X


Terminals, with rules where they appear

    $end (0) 0
    '\n' (10) 3 4
    error (256) 4
    X <var> (258) 8 9 11 12 14 15
    SIGN <cval> (259) 6 7 8 9 10 11 12
    GLT (260) 5 6
    COEF <ival> (261) 5 6 7 8 10 11 13 14


Nonterminals, with rules where they appear

    $accept (8)
        on left: 0
    input (9)
        on left: 1 2
        on right: 0 2
    line (10)
        on left: 3 4
        on right: 2
    ineq (11)
        on left: 5 6
        on right: 3
    exp (12)
        on left: 7 8 9 10 11 12 13 14 15
        on right: 5 6 7 8 9


State 0

    0 $accept: • input $end

    $default  reduce using rule 1 (input)

    input  go to state 1


State 1

    0 $accept: input • $end
    2 input: input • line

    $end   shift, and go to state 2
    error  shift, and go to state 3
    X      shift, and go to state 4
    SIGN   shift, and go to state 5
    COEF   shift, and go to state 6

    line  go to state 7
    ineq  go to state 8
    exp   go to state 9


State 2

    0 $accept: input $end •

    $default  accept


State 3

    4 line: error • '\n'

    '\n'  shift, and go to state 10


State 4

   15 exp: X •

    $default  reduce using rule 15 (exp)


State 5

   10 exp: SIGN • COEF
   11    | SIGN • COEF X
   12    | SIGN • X

    X     shift, and go to state 11
    COEF  shift, and go to state 12


State 6

   13 exp: COEF •
   14    | COEF • X

    X  shift, and go to state 13

    $default  reduce using rule 13 (exp)


State 7

    2 input: input line •

    $default  reduce using rule 2 (input)


State 8

    3 line: ineq • '\n'

    '\n'  shift, and go to state 14


State 9

    5 ineq: exp • GLT COEF
    6     | exp • GLT SIGN COEF
    7 exp: exp • SIGN COEF
    8    | exp • SIGN COEF X
    9    | exp • SIGN X

    SIGN  shift, and go to state 15
    GLT   shift, and go to state 16


State 10

    4 line: error '\n' •

    $default  reduce using rule 4 (line)


State 11

   12 exp: SIGN X •

    $default  reduce using rule 12 (exp)


State 12

   10 exp: SIGN COEF •
   11    | SIGN COEF • X

    X  shift, and go to state 17

    $default  reduce using rule 10 (exp)


State 13

   14 exp: COEF X •

    $default  reduce using rule 14 (exp)


State 14

    3 line: ineq '\n' •

    $default  reduce using rule 3 (line)


State 15

    7 exp: exp SIGN • COEF
    8    | exp SIGN • COEF X
    9    | exp SIGN • X

    X     shift, and go to state 18
    COEF  shift, and go to state 19


State 16

    5 ineq: exp GLT • COEF
    6     | exp GLT • SIGN COEF

    SIGN  shift, and go to state 20
    COEF  shift, and go to state 21


State 17

   11 exp: SIGN COEF X •

    $default  reduce using rule 11 (exp)


State 18

    9 exp: exp SIGN X •

    $default  reduce using rule 9 (exp)


State 19

    7 exp: exp SIGN COEF •
    8    | exp SIGN COEF • X

    X  shift, and go to state 22

    $default  reduce using rule 7 (exp)


State 20

    6 ineq: exp GLT SIGN • COEF

    COEF  shift, and go to state 23


State 21

    5 ineq: exp GLT COEF •

    $default  reduce using rule 5 (ineq)


State 22

    8 exp: exp SIGN COEF X •

    $default  reduce using rule 8 (exp)


State 23

    6 ineq: exp GLT SIGN COEF •

    $default  reduce using rule 6 (ineq)
